# InnoVisionApp

./: .replit  Pasted-TypeError-TypeError-can-only-concatenate-str-not-NoneType-to-str-Traceback-most-recent-cal-1726688163374.txt  README.md  add_sample_courses.py  check_user.py  config.py  main.py  models.py  pasted_text_1726524222319.txt  pasted_text_1726540036645.txt  pasted_text_1726540401417.txt  pasted_text_1726577861071.txt  pasted_text_1726578985853.txt  pasted_text_1726586056198.txt  pyproject.toml  replit.nix  requirements.txt  test_db_connection.py
migrations/versions/: 39d99339538a_add_peer_learning_tables.py  592ff840754c_increase_password_hash_length.py  d3a5aa8f46ac_add_last_login_column_to_user_table.py  fcd66f3cdbe1_add_content_column_to_course_table.py
routes/: auth.py  courses.py  peer_learning.py  user.py
services/: ai_service.py  content_service.py
static/: manifest.json
static/css/: styles.css
static/js/: auth.js  courses.js  dashboard.js  main.js  service-worker.js
templates/: base.html  course_detail.html  course_list.html  create_course.html  create_forum_post.html  create_study_group.html  dashboard.html  edit_course.html  forum.html  forum_post_detail.html  index.html  login.html  offline.html  register.html  study_group_detail.html  study_groups.html
